--- a/styles.css
+++ b/styles.css
@@ -259,6 +259,27 @@ section {
     height: auto;
     object-fit: contain;
 }
+
+#scrollToTopBtn {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  z-index: 99;
+  font-size: 18px;
+  border: none;
+  outline: none;
+  background-color: #555;
+  color: white;
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 50%;
+  opacity: 0;
+  transition: opacity 0.3s;
+}
+
+#scrollToTopBtn:hover {
+  background-color: #333;
+}
 /* Styles responsives */
 @media (max-width: 768px) {
     :root {
